--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,16 @@ hs_err_pid*
 # exclude individual IntelliJ settings
 .idea
 *.iml
+*.iws
 
 # Mac-specific
 .DS_Store
+
+# Eclipse
+.classpath
+.project
+JavaModule/.settings/
+
+# Maven
+log/
+JavaModule/target/
