--- a/JavaModule/pom.xml
+++ b/JavaModule/pom.xml
@@ -7,6 +7,29 @@
     <groupId>irwstopic3</groupId>
     <artifactId>irwstopic3</artifactId>
     <version>1.0-SNAPSHOT</version>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.ojalgo</groupId>
+			<artifactId>ojalgo</artifactId>
+			<version>42.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.matrix-toolkits-java</groupId>
+			<artifactId>mtj</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ujmp</groupId>
+			<artifactId>ujmp-core</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ujmp</groupId>
+			<artifactId>ujmp-gui</artifactId>
+			<version>0.3.0</version>
+		</dependency>
+	</dependencies>
 
 
 </project>
