--- a/JavaModule/pom.xml
+++ b/JavaModule/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>ujmp-gui</artifactId>
 			<version>0.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.7.0</version>
+		</dependency>
 	</dependencies>
 
 
