--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/bluebird": "^3.5.3",
+    "bluebird": "^3.5.0",
     "core-js": "^2.4.1",
     "ng2-ui-switch": "^1.0.2",
     "rxjs": "^5.1.0",
